--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
             <use href="./images/icons.svg#icon-close" width="18" height="18" x="-1" y="5"></use>
           </svg>
         </button>
+        <p id="contact-form" class="modal-header">Zostaw swoje dane w formularzu poniżej</p>
         <form name="modal-form" class="modal-form">
           <div class="form-group" role="group" aria-labelledby="contact-form">
-            <p id="contact-form" class="modal-header">Zostaw swoje dane w formularzu poniżej</p>
             <label class="modal-form-name">
               Imię
               <div class="form-field-set">
@@ -340,12 +340,14 @@
             </label>
           </div>
 
-          <label class="statement">
-            <input type="checkbox" name="statement" required class="checkbox checkmark" />
+          <div class="statement">
+            <label>
+              <input type="checkbox" name="statement" required class="checkbox checkmark" />
+            </label>
             <span class="modal-statement">
               Oświadczam, iż akceptuję <a class="modal-statement-link" href="./rules"> Regulamin </a> i <a class="modal-statement-link" href="./policy"> Politykę Prywatności </a>
             </span>
-          </label>
+          </div>
           <button type="submit" class="send-btn">Wyślij</button>
         </form>
       </div>
