--- a/index.html
+++ b/index.html
@@ -340,14 +340,13 @@
             </label>
           </div>
 
-          <div class="statement">
-            <label>
-              <input type="checkbox" name="statement" required class="checkbox checkmark" />
-            </label>
+          <label class="statement">
+            <input type="checkbox" name="statement" required class="checkbox checkmark" />
             <span class="modal-statement">
               Oświadczam, iż akceptuję <a class="modal-statement-link" href="./rules"> Regulamin </a> i <a class="modal-statement-link" href="./policy"> Politykę Prywatności </a>
             </span>
-          </div>
+          </label>
+
           <button type="submit" class="send-btn">Wyślij</button>
         </form>
       </div>
